# weft

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GIT-MERGE-INSTRUCTIONS.md  LICENSE  MERGE-SUMMARY.md  Makefile  PR-TROUBLESHOOTING.md  QUICK-PUSH-COMMANDS.md  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  merge-to-main.sh  package.json  push-to-main.sh  verify-merge.sh
.github/workflows/: ci-compiler.yml  ci-runtime.yml  deploy.yml  lint.yml
compiler/: Cargo.toml
compiler/src/: ast.rs  effects.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  transpile_ts.rs  typer.rs
compiler/tests/: lexer_parser.rs
docs/: PERFORMANCE.md  SPEC_OVERVIEW.md  TENANCY.md  concurrency.md  effects.md  package_format.md
examples/: ingest.weft  line_kpi.weft
examples/manifests/: ingest.manifest.json  kpi.manifest.json
proto/: scans.proto
rfid-platform/: COMPLETION_SUMMARY.md  README.md  package-lock.json  package.json
rfid-platform/docs/: DEPLOY.md
rfid-platform/scripts/: setup.js
rfid-system/: .gitlab-ci.yml  DEPLOYMENT.md  Makefile  PROJECT_SUMMARY.md  README.md
rfid-system/backend/: requirements.txt
rfid-system/frontend/: .env.vercel  .env.vercel.template  .lighthouserc.js  AUTOMATED-DEPLOYMENT.md  ENVIRONMENT-SETUP.md  README-VERCEL.md  README.md  (+6 more)
runtime-ts/: package-lock.json  package.json  tsconfig.json
runtime-vm/: README.md
server/: .env.example  index.js  package-lock.json  package.json
site/: index.html  package.json  vite.config.ts
tools/: ingest_bench.ts  loadgen.py  policy_linter.py  weft_pack_dev.py
(+98 files in other folders)
