[package]
name = "weftc"
version = "0.0.1"
edition = "2021"
authors = ["stitch-os"]
license = "MIT"
description = "Weft compiler CLI"
repository = "https://github.com/stitch-os/weft"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"

[lib]
path = "src/lib.rs"

[[bin]]
name = "weftc"
path = "src/main.rs"
